fix doc edit btn alignment

--- a/views/assets/src/helpers/less/customization/pm-overview.less
+++ b/views/assets/src/helpers/less/customization/pm-overview.less
@@ -342,3 +342,8 @@ i {
 	font-size: xxx-large;
 	color: var(--pm-secondary-button-text-regular) !important;
 }
+
+.pm-modal-conetnt .doc_contents div h3 span a {
+	display: flex !important;
+	align-items: center !important;
+}
